<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/placeOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_an_order"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:padding="10dp"/>

        <LinearLayout
            android:id="@+id/firstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeOrderText">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pizza_name"
                android:layout_weight="0.3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/pizzaText"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:autofillHints="@string/pizza_name"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionSend"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customerNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:layout_weight="0.3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/customerName"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:autofillHints="@string/customer"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionSend"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerNameLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_weight="0.3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/pizzaQuantity"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:autofillHints="@string/quantity"
                android:singleLine="true"
                android:lines="1"
                android:imeOptions="actionSend"
                android:inputType="text" />

        </LinearLayout>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/order"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>