<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/pizzaNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pizza_name"
        android:layout_weight="0.3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/pizzaName"
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:singleLine="true"
        android:lines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaNameLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:layout_weight="0.3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/customerText"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:singleLine="true"
            android:lines="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_weight="0.3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:singleLine="true"
            android:lines="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/quantityLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:alpha="0.3"
        android:background="@android:color/darker_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>